# haskell-mms

./: .gitignore  LICENSE  README.md  mms.cabal
src/Foreign/: Mms.hs
src/Foreign/Mms/: Builder.hs  Class.hs  Core.hs  GVector.hs  Get.hs  Instances.hs  List.hs  Map.hs  MappedVector.hs  Put.hs  String.hs  Vector.hs
src/Foreign/Mms/Internal/: Builder.hs  Layout.hs
test/: Builder.hs  Layout.hs  Mms.hs  Spec.hs
