name:                mms
version:             0.1.0.0
synopsis:            Memory-mapped storage for Haskell
description:         Please see README.md
homepage:            http://github.com/eeight/haskell-mms#readme
license:             BSD3
license-file:        LICENSE
author:              Petr Prokhorenkov
maintainer:          prokhorenkov@gmail.com
copyright:           2015 Petr Prokhorenkov
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Foreign.Mms
  other-modules:       Foreign.Mms.Builder
  build-depends:       base >= 4.7 && < 5
                     , bytestring
-- Just so hdevtools are happy
                     , hspec
                     , QuickCheck
  default-language:    Haskell2010
  default-extensions:  TypeFamilies
                     , Rank2Types

test-suite mms-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mms
                     , bytestring
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  TypeFamilies

source-repository head
  type:     git
  location: https://github.com/eeight/haskell-mms
