name:                mms
version:             0.1.0.0
synopsis:            Memory-mapped storage for Haskell
description:         Please see README.md
homepage:            http://github.com/eeight/haskell-mms#readme
license:             BSD3
license-file:        LICENSE
author:              Petr Prokhorenkov
maintainer:          prokhorenkov@gmail.com
copyright:           2015 Petr Prokhorenkov
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Foreign.Mms
                     , Foreign.Mms.Internal.Builder
                     , Foreign.Mms.Internal.Layout
                     , Foreign.Mms.List
                     , Foreign.Mms.Vector
  other-modules:       Foreign.Mms.Class
                     , Foreign.Mms.Core
                     , Foreign.Mms.Get
                     , Foreign.Mms.Instances
                     , Foreign.Mms.MappedVector
                     , Foreign.Mms.Put
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , mtl
-- Just so hdevtools are happy
                     , hspec
                     , QuickCheck
  default-language:    Haskell2010
  default-extensions:  DefaultSignatures
                     , DeriveFoldable
                     , DeriveFunctor
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , LambdaCase
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , Rank2Types
                     , StandaloneDeriving
                     , TypeOperators
-- Just so hdevtools are happy
                     , DataKinds
                     , DeriveGeneric
                     , FlexibleInstances
                     , KindSignatures
                     , RecordWildCards

test-suite mms-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Mms
                     , Builder
                     , Layout
  main-is:             Spec.hs
  build-depends:       base
                     , mms
                     , hspec
                     , QuickCheck
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , DeriveGeneric
                     , FlexibleInstances
                     , KindSignatures
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , RecordWildCards

source-repository head
  type:     git
  location: https://github.com/eeight/haskell-mms
